--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperature Convertor | Sohail</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="./css/index.css" />
 </head>
 <body>
     <section class="temp-container">
@@ -31,5 +31,5 @@
         </div>
     </section>
 </body>
-<script src="js/App.js"></script>
+<script src="./js/App.js" defer></script>
 </html>
